<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical" android:id="@+id/wurzel"
    android:layout_height="match_parent" tools:context=".MueckenfangActivity"
    android:background="@drawable/hintergrund">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world"
        android:textSize="24sp"
        android:textIsSelectable="true"
        android:textColor="#ffff0560"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/muecke"
        android:padding="20dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/button"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/highscore"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
        android:textColor="#ff8cff5b" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/highscore"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffc7ff0c" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:id="@+id/namenseingabe"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_highscore"
            android:id="@+id/textView3"
            android:textColor="#fffff302"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spielername" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/speichern"
            android:id="@+id/speichern" />
    </LinearLayout>
</LinearLayout>
